tests/neg-custom-args/nowarn/nowarn-refchecks.check
-- Error: tests/neg-custom-args/nowarn/nowarn-refchecks.scala:5:9 ------------------------------------------------------
5 |def t1 = f // error
  |         ^
  |         method f is deprecated
-- Error: tests/neg-custom-args/nowarn/nowarn-refchecks.scala:9:29 -----------------------------------------------------
9 |@nowarn("msg=fish") def t4 = f // error
  |                             ^
  |                             method f is deprecated
-- Error: tests/neg-custom-args/nowarn/nowarn-refchecks.scala:15:9 -----------------------------------------------------
15 |def t9 = f: @nowarn("msg=fish") // error
   |         ^
   |         method f is deprecated
